# lintegrate

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SConstruct  SConstruct_tmp  gsl-config.bat  lintegrate.c  lintegrate.h  pyproject.toml  qkrules.c  qkrules.h  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  paper.yml  pypi.yml  python-package.yml
conda/: .gitignore  conda_build.sh
docs/: capi.rst  conf.py  examples.rst  index.rst  installation.rst  pythonapi.rst
example/: Makefile  example.c  example_flat.c  example_split.c
lintegrate/: .gitignore  __init__.py  lintegrate.c  lintegrate.pxd  lintegrate.py  lintegrate.pyx
paper/: paper.bib  paper.md
python/: lintegrate.pyx  requirements.txt  setup.py
python/src/: cquad_const.c  err.c  lintegrate.c  lintegrate.h  lintegrate.pyx  lintegrate_cquad.c  lintegrate_qag.c  lintegrate_qng.c  logadd.c  logsub.c  qkrules.c  qng.h
src/: .gitignore  err.c  lintegrate.h  lintegrate_cquad.c  lintegrate_qag.c  lintegrate_qng.c  lintegrate_split.c  logadd.c  qkrules.c
src/lintegrate/: lintegrate.pyx
test/: test_lintegrate.py
