[build-system]
requires = ["pytoml>=0.1", "scons", "lintegrate"]

[tool.enscons]
name = "lintegrate"
description = "Python functions implementing numerical integration of functions in log-space."
author = "Matthew Pitkin"
author_email = "matthew.pitkin@ligo.org"
keywords = ["python", "GSL", "integration"]
url = "https://github.com/mattpitkin/lintegrate"
src_root = ""
packages = ["lintegrate"]
license = "GPL"
classifiers = [
      'Intended Audience :: Science/Research',
      'License :: OSI Approved :: GNU General Public License (GPL)',
      'Operating System :: POSIX :: Linux',
      'Programming Language :: Python',
      'Programming Language :: C',
      'Natural Language :: English'
      ]
