[metadata]
name = lintegrate
author = Matthew Pitkin
author_email = m.pitkin@lancaster.ac.uk
url = https://github.com/mattpitkin/lintegrate
description = Python functions implementing numerical integration of functions in log-space.
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[bdist_wheel]
universal = 1

[options]
python_requires = >=3.7
setup_requires =
    cython
    numpy
    setuptools_scm
install_requires = 
    numpy
packages = find:

[options.package_data]
lintegrate =
    *.pxd

[options.extras_require]
docs =
    autodoc
    pydata-sphinx-theme
    sphinx >= 2.0
    sphinx-panels
    sphinxcontrib-napoleon
    sphinxext-remoteliteralinclude
